--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,114 @@
-telegram
-python-telegram-bot
-python-dotenv
-tweepy
-
+appdirs==1.4.4
+APScheduler==3.6.3
+argon2-cffi==20.1.0
+astroid==2.4.2
+async-generator==1.10
+attrs==20.3.0
+autoscraper==1.1.12
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.9.1
+bleach==3.2.1
+browser-cookie3==0.11.1
+bs4==0.0.1
+cachetools==4.2.2
+certifi==2020.6.20
+cffi==1.14.4
+chardet==3.0.4
+click==8.0.1
+colorama==0.4.3
+configparser==3.7.4
+crayons==0.3.1
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.1
+Django==2.2.14
+entrypoints==0.3
+filelock==3.0.12
+idna==2.9
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+keyring==21.2.1
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lxml==4.6.2
+lz4==3.1.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+nltk==3.6.3
+notebook==6.1.5
+numpy==1.19.4
+oauthlib==3.1.1
+packaging==20.7
+pandocfilters==1.4.3
+parso==0.7.1
+pbkdf2==1.3
+perl==1.0.0
+pickleshare==0.7.5
+Pillow==8.0.1
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+pyaes==1.6.1
+pycparser==2.20
+pycryptodome==3.9.7
+Pygments==2.7.2
+pylint==2.5.3
+pymongo==3.11.4
+pyparsing==2.4.7
+Pyrogram==0.17.1
+pyrsistent==0.17.3
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-dotenv==0.19.0
+python-telegram-bot==13.7
+pytz==2020.1
+pywin32==300
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+pyzmq==20.0.0
+qtconsole==5.0.1
+QtPy==1.9.0
+regex==2021.8.28
+requests==2.24.0
+requests-oauthlib==1.3.0
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+terminado==0.9.1
+testpath==0.4.4
+TgCrypto==1.2.1
+toml==0.10.1
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.0.5
+tweepy==3.10.0
+tzdata==2021.1
+tzlocal==3.0
+urllib3==1.25.2
+virtualenv==20.0.26
+virtualenvwrapper-win==1.2.6
+wcwidth==0.2.5
+webdriver-manager==3.2.1
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
